# boop

./: .gitignore  LICENSE  Makefile  README.md
boop/: Cargo.toml  README.md
boop/.cargo/: config.toml
boop/doc/: error.md
boop/src/: buffer.rs  dict.rs  error.rs  lib.rs  pstring.rs  stack.rs
jjforth/: Makefile  buffer.S  dict.S  dict_pstring.S  jjforth.S  memory.x  pstring.S  stack.S
stm32f1/: Cargo.toml  README.md  memory.x  memory.x.qemu  openocd.gdb
stm32f1/.cargo/: config.toml
stm32f1/src/: lib.rs  main.rs
